deployment/aks/pods/api/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: items-store-api
  namespace: default
  labels:
    app: item-store-api
    type: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: item-store-api
  template:
    metadata:
      name: item-store-api-pod
      labels:
        app: item-store-api
    spec:
      containers:
        - name: items-store-api
          image: itemsstoreapi_app
          imagePullPolicy: Never
          ports:
          - containerPort: 8080
