deployment/aks/pods/api/api-expose.yml
apiVersion: v1
kind: Service
metadata:
  name: item-store-api
  labels:
    app: item-store-api
spec:
  type: NodePort
  ports:
   - port: 8000 
  selector:
   app: item-store-api
