deployment/aks/pods/api/service-definition.yml
apiVersion: v1
kind: Service
metadata:
  name: api-proxy
  labels:
    app: item-store-api
spec:
  type: NodePort
  selector:
   app: item-store-api
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30008
