deployment/aks/pods/api/ingress-definition.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aks-minimal-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    name: rewrite
    namespace: default
spec:
  defaultBackend:
    service:
      name: api-proxy
      port:
        number: 8080

        
  # ingressClassName: nginx
  # rules:
  # - http:
  #     paths:
  #     - path: /(/|$)(.*)
  #       pathType: Prefix
  #       backend:
  #         service: 
  #           name: api-proxy
  #           port: 
  #             number: 8080
